# data-sampler

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  TROUBLESHOOTING.md  data-sampler-gui.py  data_sampler.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
examples/: employees.csv  using_data_sampler.ipynb
scripts/: run-tui.bat  run-tui.sh
src/data_sampler/: __init__.py  __main__.py  _logging.py  _names.py  anonymize.py  cli.py  engine.py  io.py  reduce.py  report.py  sampling.py  stats.py  workflow.py
src/data_sampler/tui/: __init__.py  app.py
tests/: conftest.py  test_anonymize.py  test_cli.py  test_engine.py  test_io.py  test_names.py  test_reduce.py  test_report.py  test_sampling.py  test_stats.py  test_tui.py  test_workflow.py
